deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-deployment
  namespace: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      name: nginx-dep-pod
      labels:
        app: nginx
    spec:
      containers:
      - name: nginxcont
        image: nginx:1.31.0
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/www/html
          name: local-storage
      volumes:
      - name: local-storage
        persistentVolumeClaim:
          claimName: local-pvc
